# xrnThreadPool

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml  codeql-analysis.yml
.toolchain/: CompilerFlags.cmake  Sanitizers.cmake  StandardProjectSettings.cmake  compile
sources/: CMakeLists.txt  IJob.hpp  Job.hpp  main.cpp
sources/Pool/: Job.hpp  Runner.hpp  ThreadPool.hpp
sources/Scheduler/: Job.hpp  Runner.hpp  Scheduler.hpp
sources/ThreadPool/: Runner.hpp  ThreadPool.hpp
tests/unit/: CMakeLists.txt
tests/unit/basic/: creating.cpp
tests/unit/constexpr/: creating.cpp
